--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,49 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .sidebarP {
+    @apply text-pink-400 px-2 py-1 text-sm mr-2 cursor-pointer hover:border-r-4 hover:border-solid hover:border-purple-500;
+  }
+
+  .linkTag {
+    @apply flex items-center px-1 w-full;
+  }
+
+  .linkIcon {
+    @apply text-2xl mr-1 text-purple-500;
+  }
+
+  .sidebarItem {
+    @apply flex mb-2 mx-2 text-sm;
+  }
+
+  .navTag {
+    @apply w-10 border-[1px] text-2xl border-blue-400 border-solid h-10 rounded-full px-2 py-1 text-pink-500  hover:text-blue-400 cursor-pointer transition duration-200 hover:animate-pulse;
+  }
+
+  .headText {
+    @apply text-3xl text-center font-semibold text-pink-500 m-4;
+  }
+
+  .content {
+    @apply flex-1 md:flex-[0.8] flex-col;
+  }
+
+  .formItem {
+    @apply flex items-center m-8;
+  }
+
+  .formSvg {
+    @apply absolute transform translate-x-1 text-pink-500;
+  }
+
+  .formInput {
+    @apply px-5 py-2 w-full box-border rounded-md border-2 border-blue-400 text-lg outline-none;
+  }
+
+  .submitBtn {
+    @apply shadow-lg mt-2 w-1/4 text-white bg-blue-500 transition duration-200 ease-in hover:text-blue-500 hover:bg-white font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2;
+  }
+}
